RESOLVED FIXED54696
Composited iframe content is missing from snapshots in WebKit2
https://bugs.webkit.org/show_bug.cgi?id=54696
Summary Composited iframe content is missing from snapshots in WebKit2
Simon Fraser (smfr)
Reported 2011-02-17 17:32:48 PST
WebKit2 snapshots miss the contents of composited iframes.
Attachments
Patch (5.07 KB, patch)
2011-02-17 18:29 PST, Simon Fraser (smfr)
sam: review+
Simon Fraser (smfr)
Comment 1 2011-02-17 17:33:22 PST
For example load LayoutTests/compositing/composited-parent-iframe.html and view All History in Safari.
Simon Fraser (smfr)
Comment 2 2011-02-17 17:33:46 PST
Simon Fraser (smfr)
Comment 3 2011-02-17 18:29:01 PST
Simon Fraser (smfr)
Comment 4 2011-02-17 20:41:27 PST
WebKit Review Bot
Comment 5 2011-02-18 01:24:48 PST
http://trac.webkit.org/changeset/78946 might have broken GTK Linux 32-bit Debug
Note You need to log in before you can comment on or make changes to this bug.